Started jaxifying; got through cosmology and partway through sfrd

--- a/docs/Tutorial_Zeus21_Basics.ipynb
+++ b/docs/Tutorial_Zeus21_Basics.ipynb
@@ -13,6 +13,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import sys\n",
+    "sys.path.append(\"../\")\n",
+    "\n",
     "import zeus21\n",
     "from matplotlib import pyplot as plt\n",
     "import numpy as np\n",
@@ -21,7 +24,10 @@
     "#set up the CLASS cosmology\n",
     "from classy import Class\n",
     "ClassCosmo = Class()\n",
-    "ClassCosmo.compute()"
+    "ClassCosmo.compute()\n",
+    "\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2"
    ]
   },
   {
@@ -58,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +73,22 @@
      "text": [
       "Correlation functions saved.\n",
       "HMF interpolator built. This ends the cosmology part -- moving to astrophysics.\n",
-      "SFRD and coefficients stored. Move ahead.\n"
+      "(64, 45)\n",
+      "(45,) (45,)\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "the requested sample points xi have dimension 45, but this RegularGridInterpolator has dimension 2",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [29], line 14\u001b[0m\n\u001b[1;32m     10\u001b[0m AstroParams \u001b[38;5;241m=\u001b[39m zeus21\u001b[38;5;241m.\u001b[39mAstro_Parameters(CosmoParams, epsstar\u001b[38;5;241m=\u001b[39mepsilon_star)\n\u001b[1;32m     13\u001b[0m ZMIN \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m10.0\u001b[39m \u001b[38;5;66;03m#down to which z we compute the evolution\u001b[39;00m\n\u001b[0;32m---> 14\u001b[0m CoeffStructure \u001b[38;5;241m=\u001b[39m \u001b[43mzeus21\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_T21_coefficients\u001b[49m\u001b[43m(\u001b[49m\u001b[43mCosmoParams\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mClassyCosmo\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mAstroParams\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mHMFintclass\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mzmin\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mZMIN\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     15\u001b[0m zlist \u001b[38;5;241m=\u001b[39m CoeffStructure\u001b[38;5;241m.\u001b[39mzintegral\n\u001b[1;32m     16\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mSFRD and coefficients stored. Move ahead.\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "File \u001b[0;32m~/Projects/Zeus21/docs/../zeus21/sfrd.py:132\u001b[0m, in \u001b[0;36mget_T21_coefficients.__init__\u001b[0;34m(self, Cosmo_Parameters, ClassCosmo, Astro_Parameters, HMF_interpolator, zmin)\u001b[0m\n\u001b[1;32m    129\u001b[0m RR \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mRtabsmoo[indexkeepRsmoo]\n\u001b[1;32m    131\u001b[0m \u001b[38;5;28mprint\u001b[39m(zRR\u001b[38;5;241m.\u001b[39mshape, RR\u001b[38;5;241m.\u001b[39mshape)\n\u001b[0;32m--> 132\u001b[0m sigmaR \u001b[38;5;241m=\u001b[39m \u001b[43mHMF_interpolator\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msigmaR_int\u001b[49m\u001b[43m(\u001b[49m\u001b[43mRR\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mzRR\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    134\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m iR, RR \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mRtabsmoo[indexkeepRsmoo]):\n\u001b[1;32m    135\u001b[0m     zRR \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mztabRsmoo[izp, iR]\n",
+      "File \u001b[0;32m~/Projects/Zeus21/docs/../zeus21/cosmology.py:176\u001b[0m, in \u001b[0;36mHMF_interpolator.sigmaR_int\u001b[0;34m(self, RR, z)\u001b[0m\n\u001b[1;32m    173\u001b[0m _logRR \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mlog(RR)\n\u001b[1;32m    174\u001b[0m \u001b[38;5;66;03m# logRRvec = np.asarray([_logRR]) if np.isscalar(_logRR) else np.asarray(_logRR)\u001b[39;00m\n\u001b[1;32m    175\u001b[0m \u001b[38;5;66;03m# inarray = np.array([[LR, z] for LR in logRRvec])\u001b[39;00m\n\u001b[0;32m--> 176\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msigmaRintlog\u001b[49m\u001b[43m(\u001b[49m\u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43marray\u001b[49m\u001b[43m(\u001b[49m\u001b[43m[\u001b[49m\u001b[43m_logRR\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mz\u001b[49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m/opt/homebrew/Caskroom/miniforge/base/envs/torch-mps/lib/python3.9/site-packages/jax/_src/third_party/scipy/interpolate.py:89\u001b[0m, in \u001b[0;36mRegularGridInterpolator.__call__\u001b[0;34m(self, xi, method)\u001b[0m\n\u001b[1;32m     87\u001b[0m xi \u001b[38;5;241m=\u001b[39m _ndim_coords_from_arrays(xi, ndim\u001b[38;5;241m=\u001b[39mndim)\n\u001b[1;32m     88\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m xi\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m] \u001b[38;5;241m!=\u001b[39m \u001b[38;5;28mlen\u001b[39m(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mgrid):\n\u001b[0;32m---> 89\u001b[0m   \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mthe requested sample points xi have dimension\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m     90\u001b[0m                    \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mxi\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m1\u001b[39m]\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m, but this RegularGridInterpolator has\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m     91\u001b[0m                    \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m dimension \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mndim\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     93\u001b[0m xi_shape \u001b[38;5;241m=\u001b[39m xi\u001b[38;5;241m.\u001b[39mshape\n\u001b[1;32m     94\u001b[0m xi \u001b[38;5;241m=\u001b[39m xi\u001b[38;5;241m.\u001b[39mreshape(\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m, xi_shape[\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m])\n",
+      "\u001b[0;31mValueError\u001b[0m: the requested sample points xi have dimension 45, but this RegularGridInterpolator has dimension 2"
      ]
     }
    ],
@@ -202,9 +223,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -411,9 +430,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "CLASS-MP",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "21cmclass"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -425,7 +444,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.12"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
