--- a/docs/Tutorial_Zeus21_UVLFs.ipynb
+++ b/docs/Tutorial_Zeus21_UVLFs.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### NOTE: This notebook only works on the version of Zeus before July 2024. Pop III stars have not been added to this module yet.\n",
+    "### NOTE: This notebook only includes atomic-cooling galaxies with PopII stars. Pop III stars in minihalos have not been added to this module yet.\n",
     "\n",
     "This tutorial will cover how to generate UVLFs from Zeus21. It is recommended to do the basics tutorial first, to get a handle on how the code works. That said, this can stand on its own, so let's go!"
    ]
