Update and rename Tutorial_Zeus21_PopIIonly_Basics.ipynb to Tutorial_Zeus21_Basics.ipynb

--- a/docs/Tutorial_Zeus21_Basics.ipynb
+++ b/docs/Tutorial_Zeus21_Basics.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This tutorial will cover the basics up to predicting the 21-cm power spectrum and global signal. We will start by importing the necessary packages (Zeus, numpy, class)"
+    "This tutorial will cover the basics up to predicting the 21-cm power spectrum and global signal, assuming PopII stars only (see separate tutorial for PopIII). We will start by importing the necessary packages (Zeus, numpy, class)"
    ]
   },
   {
