enhanced tutorial for popiii uvlf on uvlf_tutorial.ipynb

--- a/docs/Tutorial_Zeus21_UVLFs.ipynb
+++ b/docs/Tutorial_Zeus21_UVLFs.ipynb
@@ -226,14 +226,27 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#and the newly added pop3 UVLF - note they'll normally be very faint, so you'll need to go to fainter MUVs\n",
+    "AstroParams_popIII = zeus21.Astro_Parameters(UserParams, CosmoParams, accretion_model=0, USE_POPIII=True) "
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "UVLFs_pop2,UVLFs_pop3= zeus21.UVLFs.UVLF_binned(AstroParams_popIII,CosmoParams,HMFintclass,z,dz,MUVcenters,MUVwidths)\n",
+    "\n",
+    "\n",
+    "plt.semilogy(MUVcenters,UVLFs_pop2,'k-')\n",
+    "plt.semilogy(MUVcenters,UVLFs_pop3,'r--')\n",
+    "plt.xlim(-22,-17)\n",
+    "plt.ylim(1e-6,1e-1)\n",
+    "plt.xlabel(r'$M_{\\rm UV}$');\n",
+    "plt.ylabel(r'$\\Phi_{\\rm UV}\\,\\rm [Mpc^{-3}\\,mag^{-1}]$');"
+   ]
   }
  ],
  "metadata": {
